manifests/app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: diploma-app
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: diploma-app
  template:
    metadata:
      labels:
        app: diploma-app
    spec:
      containers:
      - name: app
        image: cr.yandex/cr.yandex/crppthgv7553krfpenjf/diploma-app:latest
        imagePullPolicy: Always
        ports: [{ containerPort: 5000 }]
        resources:
          requests: { cpu: 50m, memory: 100Mi }
          limits: { cpu: 150m, memory: 200Mi }
        livenessProbe:
          httpGet: { path: /, port: 5000 }
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet: { path: /, port: 5000 }
          initialDelaySeconds: 10
          periodSeconds: 5
