manifests/app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: diploma-service
spec:
  selector:
    app: diploma-app
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
