manifests/app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: diploma-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: ""
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: diploma-service
            port: { number: 80 }
